Fix extra printing in 254198@main https://bugs.webkit.org/show_bug.cgi?id=244863

Fix a print statement that should only be enabled when dumping disassembly
introduced in 254198@main.

Unreviewed.

* Source/JavaScriptCore/wasm/WasmBBQPlan.cpp:
(JSC::Wasm::BBQPlan::work):
(JSC::Wasm::BBQPlan::didCompleteCompilation):

Canonical link: https://commits.webkit.org/254202@main